refactor: LottoNumber 분리