@@ -4,7 +4,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -15,8 +15,8 @@ class LottosTest {
     @BeforeEach
     private void setUp() {
         lottos = new Lottos();
-        lottos.add(new Lotto(Arrays.asList(1,2,3,4,5,6)));
-        lottos.add(new Lotto(Arrays.asList(20,30,32,40,42,43)));
+        lottos.add(new Lotto(new LottoNumber(List.of(1, 2, 3, 4, 5, 6))));
+        lottos.add(new Lotto(new LottoNumber(List.of(20,30,32,40,42,43))));
     }
 
     @Test
